added lab5_6