@@ -6,6 +6,7 @@ import com.satesilka.stationeryshop.stationery.StationeryType;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import static java.util.stream.Collectors.toList;
 
 public class StationeryManager {
     private List<Stationery> items;
@@ -16,23 +17,23 @@ public class StationeryManager {
 
     public List<Stationery> sortByPrice(SortingOrder order) {
         var comparator = Comparator.comparing(Stationery::getPrice);
-        return items.stream().sorted(order == SortingOrder.ASC ? comparator : comparator.reversed()).toList();
+        return items.stream().sorted(order == SortingOrder.ASC ? comparator : comparator.reversed()).collect(toList());
     }
 
     public List<Stationery> sortByType(SortingOrder order) {
         var comparator = Comparator.comparing(Stationery::getType);
-        return items.stream().sorted(order == SortingOrder.ASC ? comparator : comparator.reversed()).toList();
+        return items.stream().sorted(order == SortingOrder.ASC ? comparator : comparator.reversed()).collect(toList());
     }
 
     public List<Stationery> forYoungerStudent() {
-       return items.stream().filter(stationery -> stationery.getType() == StationeryType.NOTEBOOK || stationery.getType() == StationeryType.PEN||stationery.getType() == StationeryType.PAINT).toList();
+       return items.stream().filter(stationery -> stationery.getType() == StationeryType.NOTEBOOK || stationery.getType() == StationeryType.PEN||stationery.getType() == StationeryType.PAINT).collect(toList());
     }
 
     public List<Stationery> forOlderStudent() {
-        return items.stream().filter(stationery -> stationery.getType() == StationeryType.NOTEBOOK || stationery.getType() == StationeryType.PEN||stationery.getType() == StationeryType.CALCULATOR||stationery.getType() == StationeryType.PENCIL).toList();
+        return items.stream().filter(stationery -> stationery.getType() == StationeryType.NOTEBOOK || stationery.getType() == StationeryType.PEN || stationery.getType() == StationeryType.CALCULATOR || stationery.getType() == StationeryType.PENCIL).collect(toList());
     }
 
     public List<Stationery> forUniversityStudent() {
-        return items.stream().filter(stationery -> stationery.getType() != StationeryType.PAINT).toList();
+        return items.stream().filter(stationery -> stationery.getType() != StationeryType.PAINT).collect(toList());
     }
 }
